# buildpacks-deb-packages

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  build.rs  buildpack.toml  clippy.toml
.cargo/: config.toml
.github/: CODEOWNERS  dependabot.yml
.github/workflows/: check_changelog.yml  ci.yml  prepare-release.yml  release.yml  test-cross-compile.yml
keys/: ubuntu-keyring-2018-archive.asc  ubuntu_26.04.asc
scripts/: download_package_indices.sh  extract_keys.sh  inspect_package.sh
src/: aptfile.rs  create_package_index.rs  debian.rs  dependency_set.rs  dependency_versions.rs  determine_packages_to_install.rs  errors.rs  install_packages.rs  main.rs  non_root_apt.rs
src/__snapshots/: errors_config_parse_config_error_for_custom_source_with_invalid_architecture_name.snap  errors_config_parse_config_error_for_custom_source_with_invalid_components.snap  errors_config_parse_config_error_for_custom_source_with_missing_architecture_names.snap  errors_config_parse_config_error_for_custom_source_with_missing_components.snap  errors_config_parse_config_error_for_custom_source_with_missing_signed_by.snap  errors_config_parse_config_error_for_custom_source_with_missing_suites.snap  errors_config_parse_config_error_for_custom_source_with_missing_uri.snap  errors_config_parse_config_error_for_invalid_download_url.snap  errors_config_parse_config_error_for_invalid_download_url_config_type.snap  errors_config_parse_config_error_for_invalid_package_name.snap  errors_config_parse_config_error_for_invalid_package_name_config_type.snap  errors_config_parse_config_error_for_invalid_toml.snap  errors_config_parse_config_error_for_missing_namespaced_config.snap  errors_config_parse_config_error_for_wrong_config_type.snap  errors_config_read_config_error.snap  errors_create_package_index_error_checksum_failed.snap  errors_create_package_index_error_cpu_task_failed.snap  errors_create_package_index_error_create_pgp_certificate.snap  errors_create_package_index_error_create_pgp_verifier.snap  errors_create_package_index_error_get_packages_request.snap  errors_create_package_index_error_get_release_request.snap  errors_create_package_index_error_invalid_layer_name.snap  errors_create_package_index_error_missing_package_index_release_hash.snap  errors_create_package_index_error_missing_sha256_release_hashes.snap  errors_create_package_index_error_no_sources.snap  errors_create_package_index_error_parse_packages.snap  errors_create_package_index_error_parse_release_file.snap  errors_create_package_index_error_read_get_release_response.snap  errors_create_package_index_error_read_packages_file.snap  errors_create_package_index_error_read_release_file.snap  errors_create_package_index_error_task_failed.snap  errors_create_package_index_error_write_package_index_from_response.snap  errors_create_package_index_error_write_package_layer.snap  errors_create_package_index_error_write_release_layer.snap  errors_determine_packages_to_install_error_package_not_found.snap  errors_determine_packages_to_install_error_package_not_found_with_no_suggestions.snap  errors_determine_packages_to_install_error_parse_system_packages.snap  errors_determine_packages_to_install_error_read_system_packages.snap  errors_determine_packages_to_install_error_virtual_package_must_be_specified.snap  errors_framework_error.snap  (+16 more)
src/commands/: apt.rs  apt_get.rs  dpkg.rs  mod.rs
src/config/: buildpack_config.rs  custom_source.rs  download_url.rs  mod.rs  requested_package.rs
src/debian/: architecture_name.rs  distro.rs  distro_codename.rs  mod.rs  multiarch_name.rs  package_index.rs  package_name.rs  package_priority.rs  repository_package.rs  (+4 more)
tests/: integration_test.rs  rustfmt.toml
(+22 files in other folders)
