[package]
name = "buildpacks-apt"
edition = "2021"
rust-version = "1.76"

[dependencies]
commons = { git = "https://github.com/heroku/buildpacks-ruby", branch = "main" }
fun_run = "0.1"
libcnb = "=0.19.0"
indoc = "2"
semver = "1"
serde = "1"
tempfile = "3"
walkdir = "2"

[dev-dependencies]
libcnb-test = "=0.19.0"
toml = "0.8"
regex-lite = "0.1"

[lints.rust]
unreachable_pub = "warn"
unsafe_code = "warn"
unused_crate_dependencies = "warn"

[lints.clippy]
panic_in_result_fn = "warn"
pedantic = "warn"
unwrap_used = "warn"
