[package]
name = "buildpacks-deb-packages"
edition = "2024"
rust-version = "1.94"

[dependencies]
anyhow = "1"
apt-parser = "1"
ar = "0.9"
async-compression = { version = "0.4", default-features = false, features = ["tokio", "gzip", "zstd", "xz"] }
bon = "3"
bullet_stream = "0.11"
const_format = "0.2"
debversion = "0.5"
edit-distance = "2"
futures = { version = "0.3", default-features = false, features = ["alloc", "io-compat"] }
hex = "0.4"
indexmap = "2"
indoc = "2"
libcnb = { version = "0.30", features = ["trace"] }
rayon = "1"
reqwest = { version = "0.13", default-features = false, features = ["stream", "rustls-no-provider"] }
reqwest-middleware = "0.5"
reqwest-retry = "0.9"
reqwest-tracing = "0.7"
rustls = { version = "0.23", default-features = false, features = ["ring", "logging", "std", "tls12"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sequoia-openpgp = { version = "2", default-features = false, features = ["crypto-rust", "allow-experimental-crypto", "allow-variable-time-crypto"] }
sha2 = "0.11"
tokio = { version = "1", default-features = false, features = ["rt-multi-thread", "time"] }
tokio-tar = "0.3"
tokio-util = { version = "0.7", default-features = false, features = ["compat", "io"] }
toml_edit = "0.25"
tracing = "0.1"
walkdir = "2"

[dev-dependencies]
libcnb-test = "0.30"
regex = "1"
tempfile = "3"

[lints.rust]
unreachable_pub = "warn"
unsafe_code = "warn"
unused_crate_dependencies = "warn"

[lints.clippy]
panic_in_result_fn = "warn"
pedantic = { level = "warn", priority = -1 }
unwrap_used = "warn"
